# orderflow-rs

./: Cargo.toml  README.md  run.sh
src/: binance.rs  config.rs  fair_price.rs  lib.rs  main.rs  order_book.rs  websocket.rs
