[package]
name = "orderflow-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Real-time fair price calculator using Binance WebSocket API"
license = "MIT"
repository = "https://github.com/yourusername/orderflow-rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# HTTP client for REST API
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tungstenite = "0.20"
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Collections and utilities
dashmap = "5.5"

# Configuration
clap = { version = "4.0", features = ["derive"] }

# Metrics (optional, for production monitoring)
prometheus = { version = "0.13", optional = true }

[features]
default = []
metrics = ["prometheus"]

[[bin]]
name = "orderflow-rs"
path = "src/main.rs"